<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:id="@+id/rellay1"
    tools:context="com.example.moon.giftheaven.views.fragments.login_Fragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/color14">

            <ImageView
                android:layout_marginTop="20dp"
                android:src="@drawable/logo4"
                android:layout_gravity="center"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/img_1"
                />
            <TextView

                android:layout_below="@id/img_1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="35dp"
                android:textColor="@color/color1"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="serif"
                android:text="@string/UserName"
                android:textAllCaps="false"
                android:textColor="@color/color14"
                android:textSize="15dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"

                />

            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rec_bg1"
                android:drawableLeft="@drawable/u"
                android:drawableStart="@drawable/u"
                android:fontFamily="serif"
                android:hint="@string/UserName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/color14"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="-8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/pass"
                android:textAllCaps="false"
                android:textColor="@color/color14"
                android:textSize="15dp"
                android:textStyle="bold"

                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/pass_show_hide"
                app:passwordToggleEnabled="true"
                android:theme="@style/Theme.AppCompat"
                app:passwordToggleTint="@color/color14">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/upassword"
                    android:drawableLeft="@drawable/p"
                    android:drawableStart="@drawable/p"
                    android:background="@drawable/rec_bg1"
                    android:fontFamily="serif"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color14"
                    android:textSize="15dp"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="serif"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/color1"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fb_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fb_login"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_bg_f"
                android:drawableLeft="@drawable/facebook"
                android:fontFamily="serif"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/login_fb"
                android:textAllCaps="false"
                android:textColor="@color/color1"
                android:textSize="15dp"
                android:textStyle="bold" />

            <Button

                android:id="@+id/google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/google_login"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/btn_bg_g"
                android:drawableLeft="@drawable/google_"
                android:fontFamily="serif"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:text="@string/login_gmail"
                android:textAllCaps="false"
                android:textColor="@color/color1"
                android:textSize="15dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


