<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:id="@+id/rellay1"
    tools:context="com.example.moon.giftheaven.views.fragments.register_fragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/color14">

            <ImageView
                android:layout_marginTop="20dp"
                android:src="@drawable/logo4"
                android:layout_gravity="center"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/img_2"
                />
            <TextView

                android:layout_below="@id/img_2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:text="Register"
                android:textSize="35dp"
                android:textColor="@color/color1"
                android:textStyle="bold"
                />


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/UserName"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/color14"
                android:textSize="15dp"

                />

            <EditText
                android:id="@+id/name"
                android:hint="@string/UserName"
                android:drawableStart="@drawable/u"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rec_bg1"
                android:fontFamily="serif"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/color14"
                android:textSize="15dp"
                android:drawableLeft="@drawable/u" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingLeft="2dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:textColor="@color/color14"
                android:textSize="15dp"

                />



            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:drawableStart="@drawable/e"
                android:drawableLeft="@drawable/e"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/rec_bg1"
                android:fontFamily="serif"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/color14"
                android:textSize="15dp"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/pass"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:layout_marginBottom="-8dp"
                android:textColor="@color/color14"
                android:textSize="15dp"

                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/pass_show_hide"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/color14">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/password"
                    android:drawableLeft="@drawable/p"
                    android:drawableStart="@drawable/p"
                    android:background="@drawable/rec_bg1"

                    android:fontFamily="serif"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color14"
                    android:textSize="15dp"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/reg_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:text="@string/reg"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:textSize="15dp" />

        </LinearLayout>






    </LinearLayout>





</RelativeLayout>


